package Usuarios;

public class Persona {

    private String nombre;
    private String apellido;
    private String edad;
}
