package filtros;

public class CriterioCategoria implements CriterioDePertenencia {

  public Boolean evaluarCriterio() {
    // Implementación del criterio de pertenencia para la categoría
    // Aquí se puede agregar la lógica específica para evaluar el criterio
    return true; // Cambiar según la lógica implementada
  }
}