package filtros;

public interface CriterioDePertenencia{

  public Boolean evaluarCriterio();
}