package fuentes;

import lombok.Getter;
import lombok.Setter;

/**
 * Clase Dinamica que hereda de Fuente.
 */
@Getter
@Setter
public class FuenteDinamica extends Fuente {

}
