package fuentes;

import lombok.Getter;
import lombok.Setter;

/**
 * Clase Estatica que hereda de Fuente.
 */
@Getter
@Setter
public class FuenteEstatica extends Fuente{

}