package hechos;

/**
 * Posibles orígenes del hecho provisto.
 */
public enum Origen {
  CONTRIBUYENTE,
  MANUAL,
  DATASET
}
